--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,21 +1,32 @@
 {
   "extends": "@tsconfig/node16/tsconfig.json",
-  "include": [
-    "benchmark",
-    "example",
-    "src"
-  ],
+  "watchOptions": {
+    "watchFile": "priorityPollingInterval",
+    "watchDirectory": "dynamicPriorityPolling"
+  },
   "ts-node": {
     "files": true
   },
+  "include": [
+    "src",
+    "types"
+  ],
+  "exclude": [
+    "**/*.spec.ts",
+    "**/*.spec.tsx"
+  ],
   "compilerOptions": {
+    "outDir": "dist/cjs",
     "lib": [
-      "dom"
+      "DOM",
+      "DOM.Iterable",
+      "ESNext"
     ],
-    "outDir": "dist",
     "moduleResolution": "node",
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
+    "isolatedModules": true,
+    "inlineSources": true,
     "declaration": true,
     "sourceMap": true,
     "module": "commonjs",
