--- a/package.json
+++ b/package.json
@@ -1,20 +1,22 @@
 {
-  "name": "orgwasm",
+  "name": "@stagas/mono",
   "author": "stagas",
-  "short": "stagas/orgwasm",
-  "description": "orgwasm is a wasm expression compiler",
-  "version": "0.0.0",
+  "short": "stagas/mono",
+  "description": "mono is a low level language for audio expressions that compiles to wasm",
+  "version": "0.0.1",
   "license": "MIT",
-  "private": true,
   "repository": {
     "type": "git",
-    "url": "git+https://git@github.com:stagas/orgwasm.git"
+    "url": "git+https://git@github.com:stagas/mono.git"
   },
   "keywords": [
-    "typescript",
-    "scaffold",
-    "skeleton",
-    "template"
+    "audio",
+    "wasm",
+    "language",
+    "webassembly",
+    "sound",
+    "expression",
+    "compiler"
   ],
   "module": "dist/esm/index.js",
   "main": "dist/cjs/index.js",
@@ -24,69 +26,62 @@
       "require": "./dist/cjs/index.js"
     }
   },
-  "targets": {
-    "main": {
-      "context": "node",
-      "engines": {
-        "node": ">=16.0"
-      }
-    }
-  },
   "files": [
     "dist"
   ],
   "scripts": {
-    "build": "npm run clean && npm run build:cjs && npm run build:esm && echo done.",
-    "docs": "documentation readme src --resolve=node --pe ts --re ts --re d.ts --github --section=API --markdown-toc-max-depth=3",
-    "test": "jest",
-    "test:web": "web-test-runner",
-    "cov": "jest --coverage",
-    "bench": "fpick benchmark --repeat -- node -r esbuild-register",
-    "example": "fpick example --repeat -- node -r esbuild-register",
-    "playground": "vite --force --cors --https --clearScreen=false --open /playground/",
-    "lint": "eslint src && prettier --check src",
-    "build:watch": "onchange -i src --await-write-finish 400 -- npm run build",
-    "docs:watch": "onchange -i src --await-write-finish 400 -- npm run docs",
-    "test:watch": "jest --watchAll",
+    "build:watch": "tsc --outDir dist/esm --module esnext --watch",
     "cov:watch": "jest --coverage --watchAll",
-    "bench:watch": "fpick benchmark --repeat -- onchange -i src 'benchmark/**/*.{js,jsx,ts,tsx}' --await-write-finish 400 --kill -- node -r esbuild-register",
-    "example:watch": "fpick example --repeat -- onchange -i src example --await-write-finish 400 --kill -- node -r esbuild-register",
-    "build:cjs": "tsc -p tsconfig.cjs.json",
-    "build:esm": "tsc -p tsconfig.esm.json && echo '{\"type\":\"module\"}' >dist/esm/package.json",
+    "test": "npm run test:node && npm run test:web",
+    "test:node": "jest",
+    "test:web": "web-test-runner",
+    "docs": "documentation readme src --resolve=node --pe ts --re ts --re d.ts --github --section=API --markdown-toc-max-depth=3",
+    "cov": "jest --coverage",
+    "build": "npm run build:cjs && npm run build:esm && echo done.",
+    "build:cjs": "tsc --outDir dist/cjs",
+    "build:esm": "tsc --outDir dist/esm --module esnext && echo '{\"type\":\"module\"}' >dist/esm/package.json",
     "build:min": "esbuild src/index.ts --bundle --format=esm | terser --compress --module --mangle -o build.min.js",
+    "lint": "eslint src && prettier --check src",
     "lint:fix": "eslint --fix src && prettier --write src",
     "clean": "rimraf dist",
-    "prepack": "npm run build",
+    "prepack": "npm run clean && npm run build",
     "prepack:dry": "npm pack --dry-run",
     "prepare": "husky install"
   },
   "devDependencies": {
+    "@n1kk/intspector": "^1.0.2",
+    "@rollup/plugin-commonjs": "^21.0.1",
+    "@stagas/documentation-fork": "^13.2.5",
     "@stagas/sucrase-jest-plugin": "^2.2.0-fork",
+    "@swc-node/jest": "^1.4.3",
     "@tsconfig/node16": "^1.0.2",
-    "@types/jest": "^27.0.3",
-    "@types/node": "^16.11.9",
-    "@typescript-eslint/eslint-plugin": "^5.4.0",
-    "@typescript-eslint/parser": "^5.4.0",
+    "@types/jest": "^27.4.0",
+    "@types/node": "^17.0.9",
+    "@typescript-eslint/eslint-plugin": "^5.10.0",
+    "@typescript-eslint/parser": "^5.10.0",
     "@web/dev-server-esbuild": "^0.2.16",
-    "@web/test-runner": "^0.13.22",
-    "benny": "^3.7.1",
-    "benny-ascii-chart-reporter": "^1.0.1",
-    "documentation": "github:documentationjs/documentation",
-    "esbuild": "^0.13.15",
-    "esbuild-register": "^3.2.0",
-    "eslint": "^8.3.0",
-    "eslint-plugin-import": "^2.25.3",
-    "eslint-plugin-react": "^7.27.1",
-    "fpick": "^1.1.0",
+    "@web/dev-server-rollup": "^0.3.14",
+    "@web/test-runner": "^0.13.25",
+    "esbuild": "^0.14.11",
+    "esbuild-register": "^3.3.2",
+    "eslint": "^8.7.0",
+    "eslint-config-html-jsx": "^1.0.0",
+    "eslint-plugin-import": "^2.25.4",
     "husky": "^7.0.4",
-    "jest": "^27.3.1",
+    "jest": "^27.4.7",
     "jest-browser-globals": "^25.1.0-beta",
     "onchange": "^7.1.0",
-    "prettier": "^2.4.1",
+    "prettier": "^2.5.1",
     "rimraf": "^3.0.2",
     "terser": "^5.10.0",
+    "ts-jest": "^27.1.3",
     "ts-node": "^10.4.0",
-    "typescript": "^4.5.2",
-    "vite": "^2.6.14"
+    "typescript": "^4.5.4"
+  },
+  "dependencies": {
+    "lexer-next": "^3.0.0",
+    "rfdc": "^1.3.0",
+    "tinypratt": "^0.0.2",
+    "wat-compiler": "^1.0.0"
   }
 }
