--- a/package.json
+++ b/package.json
@@ -30,24 +30,27 @@
     "dist"
   ],
   "scripts": {
-    "build:watch": "tsc --outDir dist/esm --module esnext --watch & tsc --outDir dist/cjs --watch",
+    "start": "vite-open example/web.ts",
+    "start:https": "vite-open --https example/web.ts",
+    "build:watch": "tsc -p tsconfig.dist.json --outDir dist/esm --module esnext --watch & tsc -p tsconfig.dist.json --outDir dist/cjs --watch",
     "cov:watch": "jest --coverage --watchAll",
     "test": "npm run test:node && npm run test:web",
     "test:node": "jest",
     "test:web": "web-test-runner",
-    "docs": "documentation readme src --resolve=node --pe ts --re ts --re d.ts --github --section=API --markdown-toc-max-depth=3",
     "cov": "jest --coverage",
+    "docs": "documentation readme src --resolve=node --pe ts --re ts --re d.ts --github --section=API --markdown-toc-max-depth=3",
     "build": "npm run build:cjs && npm run build:esm && echo done.",
-    "build:cjs": "tsc --outDir dist/cjs",
-    "build:esm": "tsc --outDir dist/esm --module esnext && echo '{\"type\":\"module\"}' >dist/esm/package.json",
-    "build:min": "esbuild src/index.ts --bundle --format=esm | terser --compress --module --mangle -o build.min.js",
+    "build:cjs": "tsc -p tsconfig.dist.json --outDir dist/cjs",
+    "build:esm": "tsc -p tsconfig.dist.json --outDir dist/esm --module esnext && echo '{\"type\":\"module\"}' >dist/esm/package.json",
+    "build:bundle": "esbuild dist/esm/index.js --bundle --format=esm --outfile=\"$(cat package.json | jq -r '.name').js\" && wc -c \"$(cat package.json | jq -r '.name').js\"",
+    "build:min": "esbuild dist/esm/index.js --bundle --format=esm | terser --compress --module --mangle -o \"$(cat package.json | jq -r '.name').min.js\" && wc -c \"$(cat package.json | jq -r '.name').min.js\"",
     "lint": "eslint src && prettier --check src",
     "lint:fix": "eslint --fix src && prettier --write src",
     "clean": "rimraf dist",
     "prepack": "npm run clean && npm run build",
     "prepack:dry": "npm pack --dry-run",
     "prepush": "npm run lint && npm run test",
-    "prepare": "husky install"
+    "prepare": "husky install && node .pull-configs.js"
   },
   "devDependencies": {
     "@n1kk/intspector": "^1.0.2",
@@ -57,32 +60,37 @@
     "@swc-node/jest": "^1.4.3",
     "@tsconfig/node16": "^1.0.2",
     "@types/jest": "^27.4.0",
-    "@types/node": "^17.0.9",
-    "@typescript-eslint/eslint-plugin": "^5.10.0",
-    "@typescript-eslint/parser": "^5.10.0",
+    "@types/node": "^17.0.18",
+    "@typescript-eslint/eslint-plugin": "^5.12.0",
+    "@typescript-eslint/parser": "^5.12.0",
     "@web/dev-server-esbuild": "^0.2.16",
-    "@web/dev-server-rollup": "^0.3.14",
-    "@web/test-runner": "^0.13.25",
-    "esbuild": "^0.14.11",
+    "@web/dev-server-rollup": "^0.3.15",
+    "@web/test-runner": "^0.13.27",
+    "esbuild": "^0.14.22",
     "esbuild-register": "^3.3.2",
-    "eslint": "^8.7.0",
+    "eslint": "^8.9.0",
     "eslint-config-html-jsx": "^1.0.0",
     "eslint-plugin-import": "^2.25.4",
     "husky": "^7.0.4",
-    "jest": "^27.4.7",
+    "jest": "^27.5.1",
     "jest-browser-globals": "^25.1.0-beta",
     "onchange": "^7.1.0",
     "prettier": "^2.5.1",
+    "pull-configs": "^0.2.0",
     "rimraf": "^3.0.2",
+    "swcno": "^0.1.1",
     "terser": "^5.10.0",
     "ts-jest": "^27.1.3",
-    "ts-node": "^10.4.0",
-    "typescript": "^4.5.4"
+    "ts-node": "^10.5.0",
+    "typescript": "^4.5.5",
+    "vite-open": "^1.2.0",
+    "vite-web-test-runner-plugin": "^0.1.0"
   },
   "dependencies": {
-    "lexer-next": "^3.0.0",
+    "lexer-next": "^3.0.1",
+    "realistic-structured-clone": "^2.0.3",
     "rfdc": "^1.3.0",
     "tinypratt": "^0.0.2",
-    "wat-compiler": "^1.0.0"
+    "wat-compiler": "file:../wat-compiler"
   }
 }
