--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,12 +8,11 @@
     "files": true
   },
   "include": [
+    "bench",
+    "example",
     "src",
+    "test",
     "types"
-  ],
-  "exclude": [
-    "**/*.spec.ts",
-    "**/*.spec.tsx"
   ],
   "compilerOptions": {
     "outDir": "dist/cjs",
@@ -25,15 +24,15 @@
     "moduleResolution": "node",
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
+    "resolveJsonModule": true,
     "isolatedModules": true,
     "inlineSources": true,
     "declaration": true,
     "sourceMap": true,
+    "allowJs": true,
     "module": "commonjs",
     "target": "esnext",
-    "jsx": "react",
-    "jsxFactory": "h",
-    "jsxFragmentFactory": "Fragment",
+    "jsx": "preserve",
     "strict": true
   }
 }
