--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@stagas/mono",
+  "name": "monolang",
   "author": "stagas",
   "short": "stagas/mono",
   "description": "mono is a low level language for audio expressions that compiles to wasm",
@@ -27,64 +27,65 @@
     }
   },
   "files": [
-    "dist"
+    "dist",
+    "!**/*.tsbuildinfo"
   ],
   "scripts": {
-    "start": "vite-open example/web.ts",
-    "start:https": "vite-open --https example/web.ts",
-    "build:watch": "tsc -p tsconfig.dist.json --outDir dist/esm --module esnext --watch & tsc -p tsconfig.dist.json --outDir dist/cjs --watch",
+    "start:web": "vite-open example/web.ts",
+    "start:node": "onchange -i src example -- swcno example/node.ts",
+    "build:watch": "tsc -p tsconfig.dist.json --outDir dist/types --watch & swc -w -C module.type=commonjs ./src -d dist/cjs -w & swc -w -C module.type=es6 ./src -d dist/esm",
+    "build:dist": "npm run build:bundle && npm run build:min",
     "cov:watch": "jest --coverage --watchAll",
-    "test": "npm run test:node && npm run test:web",
-    "test:node": "jest",
-    "test:web": "web-test-runner",
-    "cov": "jest --coverage",
-    "docs": "documentation readme src --resolve=node --pe ts --re ts --re d.ts --github --section=API --markdown-toc-max-depth=3",
-    "build": "npm run build:cjs && npm run build:esm && echo done.",
-    "build:cjs": "tsc -p tsconfig.dist.json --outDir dist/cjs",
-    "build:esm": "tsc -p tsconfig.dist.json --outDir dist/esm --module esnext && echo '{\"type\":\"module\"}' >dist/esm/package.json",
-    "build:bundle": "esbuild dist/esm/index.js --bundle --format=esm --outfile=\"$(cat package.json | jq -r '.name').js\" && wc -c \"$(cat package.json | jq -r '.name').js\"",
-    "build:min": "esbuild dist/esm/index.js --bundle --format=esm | terser --compress --module --mangle -o \"$(cat package.json | jq -r '.name').min.js\" && wc -c \"$(cat package.json | jq -r '.name').min.js\"",
-    "lint": "eslint src && prettier --check src",
-    "lint:fix": "eslint --fix src && prettier --write src",
     "clean": "rimraf dist",
-    "prepack": "npm run clean && npm run build",
+    "docs": "dokio -o README.md && dprint fmt README.md",
+    "test": "npm run test:node && npm run test:web",
+    "test:node": "if find test -type f -iregex '.*\\.spec\\.\\(js\\|jsx\\|ts\\|tsx\\)$' | grep -q .; then jest; else echo no node tests; fi",
+    "test:web": "if find test -type f -iregex '.*\\.spec\\.web\\.\\(js\\|jsx\\|ts\\|tsx\\)$' | grep -q .; then web-test-runner; else echo no web tests; fi",
+    "cov": "jest --coverage",
+    "build": "npm run build:cjs & npm run build:esm & npm run build:types && echo done.",
+    "build:cjs": "swc -C module.type=commonjs ./src -d dist/cjs",
+    "build:esm": "swc -C module.type=es6 ./src -d dist/esm && echo '{\"type\":\"module\"}' >dist/esm/package.json",
+    "build:types": "tsc -p tsconfig.dist.json --outDir dist/types",
+    "build:bundle": "bunzee src/index.ts \"dist/$(cat package.json | jq -r '.name').js\"",
+    "build:min": "bunzee -m src/index.ts \"dist/$(cat package.json | jq -r '.name').min.js\"",
+    "start:web:https": "vite-open --https example/web.ts",
+    "lint": "eslint src && dprint check",
+    "lint:fix": "eslint --fix src && dprint fmt",
+    "prepack": "npm run clean && npm run build && (npm run build:dist || echo unable to bundle)",
     "prepack:dry": "npm pack --dry-run",
     "prepush": "npm run lint && npm run test",
-    "prepare": "husky install && node .pull-configs.js"
+    "prepare": "husky install"
   },
   "devDependencies": {
-    "@n1kk/intspector": "^1.0.2",
-    "@rollup/plugin-commonjs": "^21.0.1",
-    "@stagas/documentation-fork": "^13.2.5",
-    "@stagas/sucrase-jest-plugin": "^2.2.0-fork",
-    "@swc-node/jest": "^1.4.3",
-    "@tsconfig/node16": "^1.0.2",
-    "@types/jest": "^27.4.0",
-    "@types/node": "^17.0.18",
-    "@typescript-eslint/eslint-plugin": "^5.12.0",
-    "@typescript-eslint/parser": "^5.12.0",
-    "@web/dev-server-esbuild": "^0.2.16",
-    "@web/dev-server-rollup": "^0.3.15",
-    "@web/test-runner": "^0.13.27",
-    "esbuild": "^0.14.22",
-    "esbuild-register": "^3.3.2",
-    "eslint": "^8.9.0",
-    "eslint-config-html-jsx": "^1.0.0",
-    "eslint-plugin-import": "^2.25.4",
-    "husky": "^7.0.4",
-    "jest": "^27.5.1",
-    "jest-browser-globals": "^25.1.0-beta",
-    "onchange": "^7.1.0",
-    "prettier": "^2.5.1",
+    "@n1kk/intspector": "1.0.2",
+    "@stagas/jest-node-exports-resolver": "1.1.5-require-basedir-2",
+    "@swc-node/jest": "1.4.3",
+    "@swc/cli": "0.1.57",
+    "@swc/core": "1.2.164",
+    "@tsconfig/node16": "1.0.2",
+    "@types/jest": "27.4.1",
+    "@types/node": "17.0.23",
+    "@typescript-eslint/eslint-plugin": "5.18.0",
+    "@typescript-eslint/parser": "5.18.0",
+    "@web/test-runner": "0.13.27",
+    "bunzee": "^0.0.1",
+    "chokidar": "3.5.3",
+    "dprint": "0.24.4",
+    "eslint": "8.13.0",
+    "eslint-config-html-jsx": "1.0.0",
+    "eslint-plugin-import": "2.26.0",
+    "husky": "7.0.4",
+    "jest": "27.5.1",
+    "jest-browser-globals": "25.1.0-beta",
+    "onchange": "7.1.0",
     "pull-configs": "^0.2.0",
-    "rimraf": "^3.0.2",
-    "swcno": "^0.1.1",
-    "terser": "^5.10.0",
-    "ts-jest": "^27.1.3",
-    "ts-node": "^10.5.0",
-    "typescript": "^4.5.5",
-    "vite-open": "^1.2.0",
-    "vite-web-test-runner-plugin": "^0.1.0"
+    "rimraf": "3.0.2",
+    "swcno": "0.1.1",
+    "ts-jest": "27.1.4",
+    "ts-node": "10.7.0",
+    "typescript": "4.6.3",
+    "vite-open": "^1.6.2",
+    "wtr-plugin-vite": "^0.0.1"
   },
   "dependencies": {
     "lexer-next": "^3.0.1",
@@ -92,5 +93,14 @@
     "rfdc": "^1.3.0",
     "tinypratt": "^0.0.2",
     "wat-compiler": "file:../wat-compiler"
-  }
+  },
+  "trustedDependencies": [
+    "@stagas/jest-node-exports-resolver",
+    "bunzee",
+    "decarg",
+    "pull-configs",
+    "vite-open",
+    "wtr-plugin-vite"
+  ],
+  "types": "./dist/types/index.d.ts"
 }
