--- a/package.json
+++ b/package.json
@@ -31,24 +31,24 @@
     "!**/*.tsbuildinfo"
   ],
   "scripts": {
-    "start:web": "vite-open example/web.ts",
+    "start:web": "vite-open example/web --https",
+    "start:web:debugging": "vite-open example/web --https --debugging-this",
     "start:node": "onchange -i src example -- swcno example/node.ts",
-    "build:watch": "tsc -p tsconfig.dist.json --outDir dist/types --watch & swc -w -C module.type=commonjs ./src -d dist/cjs -w & swc -w -C module.type=es6 ./src -d dist/esm",
+    "build:watch": "fastpm autolink && tsc -p tsconfig.dist.json --outDir dist/types --watch & swc -w -C module.type=commonjs ./src -d dist/cjs -w & swc -w -C module.type=es6 ./src -d dist/esm",
     "build:dist": "npm run build:bundle && npm run build:min",
-    "cov:watch": "jest --coverage --watchAll",
+    "cov:watch": "utr --coverage --watch",
     "clean": "rimraf dist",
     "docs": "dokio -o README.md && dprint fmt README.md",
     "test": "npm run test:node && npm run test:web",
-    "test:node": "if find test -type f -iregex '.*\\.spec\\.\\(js\\|jsx\\|ts\\|tsx\\)$' | grep -q .; then jest; else echo no node tests; fi",
-    "test:web": "if find test -type f -iregex '.*\\.spec\\.web\\.\\(js\\|jsx\\|ts\\|tsx\\)$' | grep -q .; then web-test-runner; else echo no web tests; fi",
-    "cov": "jest --coverage",
+    "test:node": "if find test -type f -iregex '.*\\.spec\\.\\(js\\|jsx\\|ts\\|tsx\\)$' | grep -q .; then utr 'test/*.spec.{js,jsx,ts,tsx}'; else echo no node tests; fi",
+    "test:web": "if find test -type f -iregex '.*\\.spec\\.web\\.\\(js\\|jsx\\|ts\\|tsx\\)$' | grep -q .; then utr --browser 'test/*.spec.web.{js,jsx,ts,tsx}'; else echo no web tests; fi",
+    "cov": "utr --coverage",
     "build": "npm run build:cjs & npm run build:esm & npm run build:types && echo done.",
     "build:cjs": "swc -C module.type=commonjs ./src -d dist/cjs",
     "build:esm": "swc -C module.type=es6 ./src -d dist/esm && echo '{\"type\":\"module\"}' >dist/esm/package.json",
     "build:types": "tsc -p tsconfig.dist.json --outDir dist/types",
     "build:bundle": "bunzee src/index.ts \"dist/$(cat package.json | jq -r '.name').js\"",
     "build:min": "bunzee -m src/index.ts \"dist/$(cat package.json | jq -r '.name').min.js\"",
-    "start:web:https": "vite-open --https example/web.ts",
     "lint": "eslint src && dprint check",
     "lint:fix": "eslint --fix src && dprint fmt",
     "prepack": "npm run clean && npm run build && (npm run build:dist || echo unable to bundle)",
@@ -58,49 +58,37 @@
   },
   "devDependencies": {
     "@n1kk/intspector": "1.0.2",
-    "@stagas/jest-node-exports-resolver": "1.1.5-require-basedir-2",
-    "@swc-node/jest": "1.4.3",
     "@swc/cli": "0.1.57",
-    "@swc/core": "1.2.164",
-    "@tsconfig/node16": "1.0.2",
-    "@types/jest": "27.4.1",
-    "@types/node": "17.0.23",
-    "@typescript-eslint/eslint-plugin": "5.18.0",
-    "@typescript-eslint/parser": "5.18.0",
-    "@web/test-runner": "0.13.27",
-    "bunzee": "^0.0.1",
-    "chokidar": "3.5.3",
-    "dprint": "0.24.4",
-    "eslint": "8.13.0",
-    "eslint-config-html-jsx": "1.0.0",
+    "@swc/core": "1.2.218",
+    "@tsconfig/node16": "1.0.3",
+    "@types/audioworklet": "0.0.29",
+    "@types/jest": "27.5.2",
+    "@types/node": "17.0.45",
+    "@types/webmidi": "2.0.6",
+    "@typescript-eslint/eslint-plugin": "5.30.7",
+    "@typescript-eslint/parser": "5.30.7",
+    "bunzee": "^1.0.0",
+    "dokio": "^0.0.2",
+    "dprint": "0.30.3",
+    "eslint": "8.20.0",
+    "eslint-config-html-jsx": "^1.0.0",
     "eslint-plugin-import": "2.26.0",
+    "eslint-plugin-react": "7.30.0",
     "husky": "7.0.4",
-    "jest": "27.5.1",
-    "jest-browser-globals": "25.1.0-beta",
     "onchange": "7.1.0",
     "pull-configs": "^0.2.0",
     "rimraf": "3.0.2",
     "swcno": "0.1.1",
-    "ts-jest": "27.1.4",
-    "ts-node": "10.7.0",
-    "typescript": "4.6.3",
-    "vite-open": "^1.6.2",
-    "wtr-plugin-vite": "^0.0.1"
+    "typescript": "4.7.3",
+    "utr": "^0.2.0",
+    "vite-open": "^2.4.0"
   },
   "dependencies": {
-    "lexer-next": "^3.0.1",
-    "realistic-structured-clone": "^2.0.3",
+    "everyday-utils": "^1.0.0",
+    "lexer-next": "^4.0.1",
     "rfdc": "^1.3.0",
-    "tinypratt": "^0.0.2",
-    "wat-compiler": "file:../wat-compiler"
+    "tinypratt": "^1.0.0",
+    "wat-compiler": "^1.1.0"
   },
-  "trustedDependencies": [
-    "@stagas/jest-node-exports-resolver",
-    "bunzee",
-    "decarg",
-    "pull-configs",
-    "vite-open",
-    "wtr-plugin-vite"
-  ],
   "types": "./dist/types/index.d.ts"
 }
